# fluid

./: .env.example  .gitignore  .nxignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMONSTRATION.md  DEPLOYMENT_GUIDE.md  FLUTTER_SDK_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.scale.yml  docker-compose.testnet.yml  docker-compose.yml  nx.json  package-lock.json  package.json  pnpm-lock.yaml  railway.toml  turborepo-optimisation.txt
fluid-core/: Cargo.toml  README.md
fluid-core/examples/: basic_signing.rs  custom_signer.rs  transaction_builder.rs
fluid-core/src/: error.rs  lib.rs  signer.rs  transaction_builder.rs  types.rs
fluid-core/tests/: integration_test.rs
fluid-server/: Cargo.toml  project.json
fluid-server/docs/: log-aggregation-integration.md
fluid-server/docs/verification/: log-aggregation-verification.md
fluid-server/src/: ai_query.rs  archive.rs  blocklist.rs  horizon.rs  lib.rs  logging.rs  main.rs  state.rs
fluid-server/tests/: log_aggregation_integration.rs
server/: .env.example  Cargo.toml  PR_DESCRIPTION.md  QUICK_START.md  README.md  STRIPE_WEBHOOK_IMPLEMENTATION.md  STRIPE_WEBHOOK_TEST_RESULTS.md  build.rs  dev.db  package-lock.json  package.json  project.json
server/benches/: tokio_runtime.rs
server/docs/: TRANSACTION_FLOW.md  TRANSACTION_LOGGING.md  api-chaos-monkey.md  auto-scaling-signer.md  automated-master-key-rotation.md  automated-sar-case-management.md  gitleaks-pre-commit.md  hardening-reliability-hooks.md  horizon-failover-logic-polish.md  ip-based-admin-access-list.md  jwt-secret-rotation.md  memory-leak-profiling.md  pgbouncer-deployment.md  prisma-index-audit.md  rbac.md  redis-cluster-support.md  redis-cluster-verification.md  request-idempotency.md  stellar-auto-swap.md  vault.md  verification_report.md
server/examples/: redis-cluster-usage.ts
server/prisma/: schema.prisma  seed.ts
server/prisma/migrations/20260325174800_init_tenants/: migration.sql
server/prisma/migrations/20260327093000_add_tenant_webhook_secret/: migration.sql
server/prisma/migrations/20260327162000_add_discord_milestones/: migration.sql
server/prisma/migrations/20260328000000_add_sandbox_api_keys/: migration.sql
server/prisma/migrations/20260328120000_add_transaction_logging/: migration.sql
server/prisma/migrations/20260329160000_add_sar_compliance/: migration.sql
server/proto/: internal_signer.proto
server/rust/src/: lib.rs
server/scripts/: demonstrateStripeWebhook.ts  verifyTransactionLogging.ts
server/src/: config.ts  index.ts
server/src/benchmarks/: load_test.ts
server/src/chaos/: apiChaosMonkey.test.ts  apiChaosMonkey.ts  faultInjection.test.ts
server/src/config/: sar-rules.json
server/src/contracts/soroban/nft-demo/: Cargo.toml  README.md
server/src/errors/: AppError.ts
server/src/handlers/: adminAnalytics.ts  adminApiKeys.ts  adminBridgeSettlements.ts  adminMultiChainStats.test.ts  adminMultiChainStats.ts  adminSAR.test.ts  adminSAR.ts  adminTransactions.ts  badge.test.ts  badge.ts  feeBump.slippage.test.ts  feeBump.test.ts  feeBump.ts  sandbox.test.ts  sandbox.ts  statusPage.test.ts  statusPage.ts  stripeWebhook.ts  tenantWebhook.test.ts  tenantWebhook.ts
server/src/horizon/: circuitBreaker.test.ts  circuitBreaker.ts  failoverClient.test.ts  failoverClient.ts
server/src/middleware/: adminBruteForce.test.ts  adminBruteForce.ts  adminIpAccessMiddleware.test.ts  adminIpAccessMiddleware.ts  apiKeys.ts  brute-force-protection.md  brute-force-protection.txt  idempotencyMiddleware.test.ts  idempotencyMiddleware.ts  ipFilter.test.ts  ipFilter.ts  rateLimit.ts  sandboxGuard.ts  soc2Logger.test.ts  soc2Logger.ts
server/src/models/: tenantStore.ts  transactionLedger.ts
server/src/queues/: connection.ts  feeBumpQueue.ts
server/src/schemas/: feeBump.ts  tenantWebhook.ts
server/src/services/: alertService.test.ts  alertService.ts  auditLogger.ts  bloomFilterService.test.ts  bloomFilterService.ts  chainRegistryService.ts  cosmosFeeGrant.ts  discordMilestones.test.ts  discordMilestones.ts  healthService.ts  idempotencyService.test.ts  idempotencyService.ts  ipAccessControl.test.ts  ipAccessControl.ts  keyRotationService.test.ts  keyRotationService.ts  kycService.test.ts  kycService.ts  ofacScreening.test.ts  ofacScreening.ts  pre-commit-gitleaks.ts  priceService.ts  prismaIndexAudit.test.ts  prismaIndexAudit.ts  regionRouter.test.ts  regionRouter.ts  sarCaseManagement.test.ts  sarCaseManagement.ts  sarService.test.ts  sarService.ts  signerAutoscaler.test.ts  signerAutoscaler.ts  slackNotifier.ts  statusMonitorService.test.ts  statusMonitorService.ts  sweep.service.ts  treasuryRebalancer.test.ts  treasuryRebalancer.ts  treasuryService.test.ts  treasuryService.ts  (+3 more)
server/src/signing/: grpcEngine.test.ts  grpcEngineClient.ts  index.ts  native.ts
server/src/sponsors/: stellar.ts
server/src/stellar/: autoSwap.test.ts  autoSwap.ts
server/src/test/: stripeWebhookIntegration.ts  stripeWebhookTest.ts  verifyWormhole.ts
server/src/utils/: adminAuth.test.ts  adminAuth.ts  db.ts  logger.test.ts  logger.ts  memoryProfiler.test.ts  memoryProfiler.ts  priceOracle.test.ts  priceOracle.ts  redis.integration.test.ts  redis.test.ts  redis.ts  redisClientFactory.test.ts  redisClientFactory.ts  redisRateLimitStore.ts  replicaDb.test.ts  stellarAddressExtractor.test.ts  stellarAddressExtractor.ts
server/src/workers/: anomalyDetectionWorker.ts  balanceMonitor.test.ts  balanceMonitor.ts  baseWorker.ts  bridgeMonitor.ts  dailyScoringWorker.test.ts  dailyScoringWorker.ts  digestWorker.test.ts  digestWorker.ts  feeBumpWorker.ts  incidentMonitor.ts  ledgerMonitor.failover.test.ts  ledgerMonitor.test.ts  ledgerMonitor.ts  partitionMaintenanceWorker.ts  sandboxAutoReset.ts  tenantErasureWorker.test.ts  tenantErasureWorker.ts  treasuryRefill.ts
server/verification/: AssetWhitelistEditor.test.tsx  AssetWhitelistEditor.tsx  auto-scaling-signer.txt  automated-master-key-rotation.txt  automated-sar-case-management.txt  horizon-failover-logic-polish.md  ip-based-admin-access-list.txt  request-idempotency.txt
(+221 files in other folders)
