[workspace]
members = ["fluid-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Stellar-Fluid/fluid"

[workspace.dependencies]
ed25519-dalek = "2.2.0"
stellar-strkey = "0.0.16"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
zeroize = "1.8.2"
thiserror = "1.0"
