[package]
name = "fluid-server"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust backend for Fluid (Stellar fee-bump relay)"

[dependencies]
ed25519-dalek = "2.2"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
sha2 = "0.10"
stellar-strkey = "0.0.16"
stellar-xdr = { version = "26.0.0", features = ["base64", "curr"] }
wasm-bindgen = "0.2.105"

dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
js-sys = "0.3"
uuid = { version = "1.0", features = ["v4", "serde", "rng-getrandom"] }
aws-config = "1.0"
aws-sdk-s3 = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Enable getrandom v0.3 wasm support (feature unifies across the build).
getrandom = { version = "0.3", features = ["wasm_js"] }
# Some transitive deps use getrandom v0.4.x (e.g. hash32); enable wasm support there too.
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.8"
prost = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["transport"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false