[package]
name = "fluid-signer"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]
path = "rust/src/lib.rs"

[dependencies]
core_affinity = "0.8.1"
ed25519-dalek = "2.2.0"
log = "0.4.22"
napi = { version = "3.8.3", features = ["async"] }
napi-derive = "3.3.3"
num_cpus = "1.16.0"
stellar-strkey = "0.0.16"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "process"] }
zeroize = "1.8.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
vaultrs = "0.8.0"
vaultrs-login = "0.2.3"
reqwest = { version = "0.12.12", features = ["json"] }
stellar-xdr = { version = "26.0.0", features = ["base64"] }
base64 = "0.22.1"
prost = "0.13.5"
tokio-stream = "0.1.17"
tokio-rustls = "0.26.1"
tonic = { version = "0.12.3", features = ["transport"] }
rustls = "0.23.23"
rustls-pemfile = "2.2.0"
sha2 = "0.10.8"
hex = "0.4.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tokio_runtime"
harness = false

[build-dependencies]
napi-build = "2.3.0"
tonic-build = "0.12.3"
